SAFECDX-359: Adding unit tests